--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="./assets/ryan-stone-797662-unsplash.jpg" alt="">
     <h1 id="myid">tedst</h1>
 </body>
 </html>
