--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Webpack starter</title>
 </head>
 <body>
-    <img src="./assets/ryan-stone-797662-unsplash.jpg" alt="">
-    <h1 id="myid">tedst</h1>
+    <div class="container">
+        <h1>Webpack starter</h1>
+        <img class="img" src="./assets/ryan-stone-797662-unsplash.jpg" alt="">
+    
+    </div>
 </body>
 </html>
